tests/sksl/errors/MatrixInlinedIndexOutOfRange.glsl
### Compilation failed:

error: 6: index -1 out of range for 'float3x3'
error: 6: index 3 out of range for 'float3x3'
2 errors
